CONTRATO CANCAO NOVA

--- a/templates/cadastro.grupoEdita.html
+++ b/templates/cadastro.grupoEdita.html
@@ -81,6 +81,7 @@ $("#ano").mask("9999");
           <option value="contrato1.php" {SELECTED_MODELO1}>Contrato Internacional</option>
           <option value="contrato2.php" {SELECTED_MODELO2}>Contrato Nacional</option>
           <option value="contrato3.php" {SELECTED_MODELO3}>GRUPO JMJ 16</option>
+          <option value="contrato4.php" {SELECTED_MODELO4}>CANÇÃO NOVA</option>
         </select>
       </div>
     </div>
