--- a/templates/contrato3.html
+++ b/templates/contrato3.html
@@ -157,7 +157,7 @@ Todos os documentos deverão ser apresentados à CONTRATADA no prazo máximo de 60 
 <p class="paragrafo">
 12.2. No caso da CONTRATANTE efetuar a inscrição da J.M.J. 2016 por conta própria, sem ser através da CONTRATADA, ficando o CONTRATANTE responsável pelo recebimento do Kit do peregrino, informações do alojamento, traslado até o alojamento e informações pertinentes a sua inscrição, deixando a CONTRATADA isenta de toda a responsabilidade sobre a inscrição da J.M.J. 2016 do CONTRATANTE;
 </p>
-<h5>13. Cláusula décima Segunda: DESCONTENTAMENTOS E RECLAMAÇÕES</h5>
+<h5>13. Cláusula décima Terceira: DESCONTENTAMENTOS E RECLAMAÇÕES</h5>
 <p class="paragrafo">
 13.1. Em caso de qualquer reclamação ou descontentamento, o CONTRATANTE deverá fazê-la à CONTRATADA por escrito, entregando-a mediante protocolo com recibo, no prazo de 30 dias a contar do término da viagem, e após este período, os serviços prestados serão considerados perfeitos e acabados.
 </p>
