relatorio de cartoes de credito - adicionar debto

--- a/templates/relatorio.cartoesPrint.html
+++ b/templates/relatorio.cartoesPrint.html
@@ -30,9 +30,9 @@
           </tr>
          <!-- END BLOCK_ITEM_LISTA -->
 		  <tr>
-            <td colspan="2" style="text-align:right;">Totais:</td>
+            <td colspan="3" style="text-align:right;">Totais:</td>
 			<td style="text-align:right;">{TOTAL_VALOR_PAGO_REAL}</td>
-			<td style="text-align:right;">&nbsp;</td>
+			<td colspan="2" style="text-align:right;">&nbsp;</td>
           </tr>
         </tbody>
       </table>
