adicionar débito no relatório de cartões

--- a/templates/relatorio.cartoes.html
+++ b/templates/relatorio.cartoes.html
@@ -14,7 +14,7 @@ $("#ano").change(function(){
 </script>
 
 <section>
-<h1>Relatório de Cartões de Crédito</h1>
+<h1>Relatório de Cartões de Crédito e Débito</h1>
 <form class="form-horizontal" id="frmEdit" method="post" action="relatorio.cartoesPrint.php" target="_blank">
         <fieldset>
           <legend>Dados para Pesquisa</legend>
