--- a/templates/relatorio.cartoesPrint.html
+++ b/templates/relatorio.cartoesPrint.html
@@ -1,5 +1,5 @@
 <section>
-<h3>Relatório de Cartão de Crédito - {DATA_RELATORIO}</h3>
+<h3>Relatório de Cartão de Crédito e Débito - {DATA_RELATORIO}</h3>
 <h4>{COD_GRUPO}&nbsp;&nbsp;&nbsp;{NOME_GRUPO} - {CIFRAO_GRUPO} {VALOR_GRUPO} {MOEDA_GRUPO_PLURAL}</h4>
 <!-- BEGIN BLOCK_OPCIONAL -->
 <h4>{NOME_GRUPO_OPCIONAL} - {CIFRAO_GRUPO} {VALOR_GRUPO_OPCIONAL} {MOEDA_GRUPO_PLURAL}</h4>
