--- a/ajax/templates/ajax.carregaPagamentos.html
+++ b/ajax/templates/ajax.carregaPagamentos.html
@@ -199,6 +199,12 @@ $(document).ready(function(){
 			 <input type="text" name="numeroCartao" id="numeroCartao" placeholder="Últimos 4 números do Cartão" class="span4 required" value="{NUMERO_CARTAO}" maxlength="4">			
           </div>
           </div>
+          <div class="control-group">
+            <label for="codAutorizacao" class="control-label">Código Autorização:</label>
+            <div class="controls">
+             <input type="text" name="codAutorizacao" id="codAutorizacao" placeholder="Código de Autorização" class="span4" value="{COD_AUTORIZACAO}">          
+          </div>
+          </div>    
 		  <div class="control-group">
             <label for="cotacaoReal" class="control-label">Cambio do Dollar/Real:</label>
             <div class="controls">
