filtrar etiquetas por dados do cliente

--- a/templates/relatorio.malaDireta.html
+++ b/templates/relatorio.malaDireta.html
@@ -143,11 +143,34 @@ $("#ano").change(function(){
       </div>
     </div>   
   </div>
-		  	
+  </fieldset>
+	 <fieldset>
+  <legend>Dados Pessoais</legend>	
+  <div class="row"> 
+    <div class="span12"> 
+      <div class="control-group"> 
+        <label for="cpf" class="control-label">CPF:</label>
+        <div class="controls"> 
+          <input type="text" name="cpf" id="cpf" value="" class="span3">
+        </div>
+      </div>
+    </div>   
+  </div>  
+  <div class="row"> 
+    <div class="span12"> 
+      <div class="control-group"> 
+        <label for="cpf" class="control-label">Nome:</label>
+        <div class="controls"> 
+          <input type="text" name="nome" id="nome" value="" class="span12">
+        </div>
+      </div>
+    </div>   
+  </div>  
+  </fieldset>	
 	<div class="form-actions">
             <button class="btn btn-primary" type="submit">Gerar Etiquetas</button>
             <button class="btn" id="bt_voltar" type="button">Voltar</button>
           </div>
-        </fieldset>
+        
       </form>
 </section>
