Alteração em contrato, item 5.3

--- a/templates/contrato4.html
+++ b/templates/contrato4.html
@@ -72,6 +72,9 @@ $(document).ready(function(){
 <p class="paragrafo">
 5.2. As taxas alfandegárias, aeroviárias, portuárias, serviços de lavanderia, bebidas, telefonemas, gorjetas, passeios opcionais, guia fora da programação oficial, refeições, vistos, taxas e ingressos para parques, museus, igrejas, casas de espetáculos e demais despesas não previstas no contrato e no Roteiro de Viagem em anexo, são de inteira responsabilidade do <STRONG>CONTRATANTE</STRONG>.
 </p>
+<p class="paragrafo">
+5.3. A Contratada, como intermediária na venda do aludido pacote turístico, reserva-se no direito de corrigir os valores do referido pacote, caso haja aumento acima de 5% do câmbio negociado com o CONTRATANTE, em função de fatores econômico – financeiros decorrentes de políticas governamentais adotadas, à época da viagem.  O pagamento por parte do CONTRATANTE, desse reajuste poderá ser em cheque – cartão – depósito em conta – espécie,  etc,  com o objetivo do pagamento integral do pacote. 
+</p>
 <h5 >6. Cláusula Sexta: DOS HORÁRIOS E NORMAS</h5>
 <p class="paragrafo" >
 6.1. O <STRONG>CONTRATANTE</STRONG> deverá observar e obedecer aos horários determinados pelas empresas de transporte para os embarques, obrigando-se a respeitar as condições de comportamento e segurança determinados pelas mesmas, bem como as normas de funcionamento interno nos estabelecimentos dos prestadores de serviços contratados, não tendo a <STRONG>CONTRATADA</STRONG> quaisquer responsabilidade pelos danos causados pelos <STRONG>CONTRATANTE</STRONG>S.
