--- a/templates/contratodeviagens.html
+++ b/templates/contratodeviagens.html
@@ -56,6 +56,9 @@
 </p><p class="paragrafo">
 5.2. As taxas alfandegárias, aeroviárias, portuárias, serviços de lavanderia, bebidas, telefonemas, gorjetas, passeios opcionais, guia fora da programação oficial, refeições, vistos, taxas e ingressos para parques, museus, igrejas, casas de espetáculos e demais despesas não previstas no contrato e no anexo I, são de inteira responsabilidade do CONTRATANTE.
 </p>
+<p class="paragrafo">
+5.3. A Contratada, como intermediária na venda do aludido pacote turístico, reserva-se no direito de corrigir os valores do referido pacote, caso haja aumento acima de 5% do câmbio negociado com o CONTRATANTE, em função de fatores econômico – financeiros decorrentes de políticas governamentais adotadas, à época da viagem.  O pagamento por parte do CONTRATANTE, desse reajuste poderá ser em cheque – cartão – depósito em conta – espécie,  etc,  com o objetivo do pagamento integral do pacote. 
+</p>
 <h5 >6. Cláusula sexta: DOS HORÁRIOS E NORMAS</h5>
 <p class="paragrafo" >
 6.1. O CONTRATANTE deverá observar e obedecer aos horários determinados pelas empresas de transporte para os embarques , obrigando-se a respeitar as condições de comportamento e segurança determinados pelas mesmas, bem como as normas de funcionamento interno nos estabelecimento dos prestadores de serviços contratados.
