simplificacao do relatorio geral

--- a/templates/relatorio.geralGrupo.html
+++ b/templates/relatorio.geralGrupo.html
@@ -15,7 +15,7 @@ $(document).ready(function(){
 
 <section>
 <h1>Relatório Geral por Grupo</h1>
-<form class="form-horizontal" id="frmEdit" method="post" action="relatorio.geralGrupoPrint.php" target="_blank">
+<form class="form-horizontal" id="frmEdit" method="post" action="relatorio.geralGrupoPrint3.php" target="_blank">
         <fieldset>
           <legend>Dados de Pesquisa</legend>
           <div class="control-group">
