ajuste envia contrato email

--- a/templates/contrato1.html
+++ b/templates/contrato1.html
@@ -7,7 +7,7 @@ $(document).ready(function(){
 });
 
 </script>
-<form class="well form-search" action="contratodeviagens.php" id="frmEmail" method="post">
+<form class="well form-search" action="contrato1.php" id="frmEmail" method="post">
         <input type="hidden" name="idGrupo" value="{ID_GRUPO_HASH}"/>
 		<input type="hidden" name="idParticipante" value="{ID_PARTICIPANTE_HASH}"/>
 		 <input type="text" class="input-medium search-query" name="tupiSendEmail"/>
