alteração em contrato

--- a/templates/contrato4.html
+++ b/templates/contrato4.html
@@ -100,7 +100,7 @@ Parágrafo Único: A Correção de que trata a Cláusula 5.3 é para restabelecer quai
 - Comunicação entre 60 a 30 dias da data da viagem: reembolso de 80% do valor do pacote pago;
 - Comunicação entre  29  a 11 dias da viagem:  reembolso de 70% do valor  do pacote pago; e
 - Comunicação entre 10 dias ou menos da data da viagem: reembolso de 60% do valor do pacote pago.
-Caso não tenha havido nenhum pagamento, considerar para esta cláusula o valor do Pacote, presente neste instrumento e no Anexo I - Roteiro de Peregrinação para efeito de multa contratual, considerando os percentuais, nesta Cláusula previstos.
+Caso não tenha havido nenhum pagamento pagamento parcial,   considerar para esta cláusula o valor do Pacote + taxa de Adesão + Taxas de Embarque,  presentes  neste instrumento e no Anexo I - Roteiro de Peregrinação para efeito de multa contratual, considerando os percentuais, nesta Cláusula previstos.
 </p><p class="paragrafo ">
 8.2. Por outro lado, acaso haja desistência da contratação do pacote turístico, o <STRONG>CONTRATANTE</STRONG> terá direito de utilizar todo o valor do crédito, após a aplicação do previsto na Cláusula 8.1 do presente, para realizar a contratação de quaisquer outros pacotes turísticos ofertados pela <STRONG>CONTRATADA</STRONG>, tendo o prazo de 06 (seis) meses para que seja utilizado o crédito do valor pago. O crédito poderá ser utilizado em favor do <STRONG>CONTRATANTE</STRONG> ou de terceiro, acaso haja a solicitação por escrito e na presença do beneficiário de duas testemunhas que deverão assinar o respectivo requerimento.
 </p><p class="paragrafo">
